fixed sizing and positioning, added hover display and fixed z-index and position issues

--- a/components/bubbles.module.scss
+++ b/components/bubbles.module.scss
@@ -3,8 +3,6 @@
 #bubble_container {
     position: sticky; //to always stick to bottom
     bottom: 0;
-    
-    width: 100%;
     height: 50vh;
     overflow: hidden; //to hide bubbles on spawn
 
