--- a/components/floating_bubbles.module.scss
+++ b/components/floating_bubbles.module.scss
@@ -1,28 +1,115 @@
 
 .bubble {
   background-color: white;
-  background-size: 1076px 1076px;
+  // background-size: 1076px 1076px;
   border-radius: 50%;
   box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.1);
-  height: 152px;
-  margin-right: 20px;
+  height: 10vw;
+  width: 10vw;
+  margin-left: -2vw; //shift left all a bit so do not have to manually edit their specific positions
+
+  // margin-right: 20px;
   position: absolute;
+  //so pops in when page loads (?)
   transition: opacity ease-in-out 1s;
-  width: 152px;
+  
+  z-index: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 }
 
 .bubble:hover {
     background-color: rgb(245, 245, 245);
+    height: 11vw; //scale up a bit
+    width: 11vw;
+    margin-top: -2vh; //move up
+}
+
+.hitbox {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  opacity: 0;
+  background-color: transparent;
+  z-index: 1;
+  position: fixed;
+}
+
+.hitbox:hover {
+  animation: appear 0.5s ease-out;
+  animation-fill-mode: both;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+//for text inside the circular bubble
+.bbl_txt {
+  text-align: center;
+  font-size: 2vw;
+  width: 100%;
+  border-radius: 50%; 
+  
+}
+
+//for the text bubble itself
+.text_bubble {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 4;
+
+}
+
+//for the text in the text bubble
+.des {
+  font-size: 2vw;
+  width: 85%;
+  height: 100%;
+  position: absolute;
+  transform: translate(1vw, 5vh);
+  z-index: 5;
+}
+
+
+//wrapper class for text bubble
+.popup {
+  position: relative;
+  transform: translate(8.5vw, 12vh);
+  pointer-events: none;
+  width: 15vw;
+  height: 30vh;
+
+  opacity: 1;
+  z-index: 3; 
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .bubbles {
-  height: 600px;
+  height: 88vh;
   overflow: hidden;
   position: relative;
 }
 
 .bubbles-wrapper {
-  background-color: salmon;
   display: flex;
   flex-direction: column;
   justify-content: center;
